created main/home page

--- a/client/pages/home.html
+++ b/client/pages/home.html
@@ -4,11 +4,55 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculator Home</title>
-    <!-- <link rel="stylesheet" href="app"> -->
-    <link rel="stylesheet" href="../style/app.css">
+    <title>MultiMath</title>
+    <link rel="stylesheet" href="app">
+    <link rel="stylesheet" href="main">
 </head>
 <body>
-    <h1>MultiMath</h1>
+    <header>
+        <div class="mdblock relative">
+            <a href="https://midelight.net"><img src="https://midelight.net/favicon.ico"/>Midelight</a>
+            <a target="_blank" href="https://github.com/Hypenexy/WriteNote">Source Code</a>
+        </div>
+    </header>
+    <div class="main">
+        <div class="mdblock mainpanel">
+            <h1>MultiMath</h1>
+            <p>A multiplayer calculator</p>
+            <div class="label">
+                <p>Create a room</p>
+                <div class="modes">
+                    <a href="/collaborative"><button>Collaborative</button></a>
+                    <a href="/challenge"><button>Challenge</button></a>
+                </div>
+            </div>
+            <div class="label">
+                <p>Join a room</p>
+                <div class="join">
+                    <input placeholder="Room ID"><button>Join</button>
+                </div>
+            </div>
+        </div>
+        <div class="info">
+            <div class="panel">
+                <div class="mdblock">
+                    <h2>Collaborative</h2>
+                    <p>In this mode you get a shared calculator field to work on math together.</p>
+                </div>
+            </div>
+            <div class="panel">
+                <div class="mdblock">
+                    <h2>Challenge</h2>
+                    <p>Here you can go head to head versus a friend, family or colleague.</p>
+                </div>
+            </div>
+            <div class="panel">
+                <div class="mdblock">
+                    <h2>How does this work?</h2>
+                    <p>Here you can go head to head versus a friend, family or colleague.</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
