--- a/client/pages/collaborative.html
+++ b/client/pages/collaborative.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculator Collaborative</title>
+    <title>MultiMath Collaborative</title>
+    <link rel="stylesheet" href="app">
 </head>
 <body>
     <script src="/socket.io/socket.io.js"></script>
-    <script>
-        var socket = io();
-    </script>
+    <script src="/collaborative"></script>
 </body>
 </html>
