--- a/client/pages/collaborative.html
+++ b/client/pages/collaborative.html
@@ -6,9 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MultiMath Collaborative</title>
     <link rel="stylesheet" href="app">
+    <link rel="stylesheet" href="game">
 </head>
-<body>
+<body class="collab">
+    <div id="loggingIn">
+        <div class="lds-ring"><div></div><div></div><div></div><div></div></div>
+        <p>Logging In</p>
+    </div>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="/collaborative"></script>
+    <script src="/collaborativejs"></script>
 </body>
 </html>
