--- a/client/pages/collaborative.html
+++ b/client/pages/collaborative.html
@@ -14,6 +14,8 @@
         <p>Logging In</p>
     </div>
     <script src="/socket.io/socket.io.js"></script>
+    <script src="/assets/libraries/MDUtils.js"></script>
     <script src="/collaborativejs"></script>
+    <script src="/calculatorjs"></script>
 </body>
 </html>
